fix a UI bug on mobile

--- a/src/assets/style/theme.css
+++ b/src/assets/style/theme.css
@@ -17,6 +17,7 @@
 }
 
 .header-navbar,
-.main-sidebar {
+.main-sidebar,
+.system-header {
   z-index: 99 !important;
 }
